tests/baselines/reference/thisTypeInAccessors.errors.txt
thisTypeInAccessors.ts(8,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
thisTypeInAccessors.ts(9,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
thisTypeInAccessors.ts(13,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
thisTypeInAccessors.ts(19,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
thisTypeInAccessors.ts(23,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
thisTypeInAccessors.ts(24,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
thisTypeInAccessors.ts(29,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
thisTypeInAccessors.ts(30,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.


==== thisTypeInAccessors.ts (8 errors) ====
    interface Foo {
        n: number;
        x: number;
    }
    
    const explicit = {
        n: 12,
        get x(this: Foo): number { return this.n; },
              ~~~~~~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
        set x(this: Foo, n: number) { this.n = n; }
              ~~~~~~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
    }
    const copiedFromGetter = {
        n: 14,
        get x(this: Foo): number { return this.n; },
              ~~~~~~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
        set x(n) { this.n = n; }
    }
    const copiedFromSetter = {
        n: 15,
        get x() { return this.n },
        set x(this: Foo, n: number) { this.n = n; }
              ~~~~~~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
    }
    const copiedFromGetterUnannotated = {
        n: 16,
        get x(this: Foo) { return this.n },
              ~~~~~~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
        set x(this, n) { this.n = n; }
              ~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
    }
    
    class Explicit {
        n = 17;
        get x(this: Foo): number { return this.n; }
              ~~~~~~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
        set x(this: Foo, n: number) { this.n = n; }
              ~~~~~~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
    }
    class Contextual {
        n = 21;
        get x() { return this.n } // inside a class, so already correct
    }
    